infrastructure/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 832812833683.dkr.ecr.eu-central-1.amazonaws.com/fileshare:backend
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
