infrastructure/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 832812833683.dkr.ecr.eu-central-1.amazonaws.com/fileshare:frontend
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3000
