infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: entrypoint
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: fileshare.aws.martinwitczak.com
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
          - path: /backend
            backend:
              serviceName: backend
              servicePort: 80
